# bevy_gdext

./: .gitignore  Cargo.toml  README.md
examples/meshinstance3d_puppet/: README.md
examples/meshinstance3d_puppet/meshinstance_3d_puppet/: icon.svg.import  project.godot  rust.gdextension  world.tscn
examples/meshinstance3d_puppet/meshinstance_3d_puppet/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache8  project_metadata.cfg
examples/meshinstance3d_puppet/rust/: Cargo.toml
examples/meshinstance3d_puppet/rust/src/: lib.rs
examples/node3d_puppet/: README.md
examples/node3d_puppet/node_3d_puppet/: icon.svg.import  project.godot  world.tscn
examples/node3d_puppet/rust/: Cargo.toml
examples/node3d_puppet/rust/src/: lib.rs
src/: bevy_utility.rs  godot_default_plugins.rs  godot_ref.rs  lib.rs  transform_translation.rs
src/godot_puppets/: mod.rs  node3d.rs
src/godot_scene_tree/: mod.rs  scene_tree.rs  scene_tree_plugin.rs
src/puppet/: mod.rs
src/resource/: asset_insert_plugin.rs  mod.rs  primitives.rs
