[package]
name = "bevy_gdext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = { version = "0.10.0", default-features = false }
godot = { git = "https://github.com/2-3-5-41/gdext.git" }
