[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # As per the `godot-rust/gdext` setup.

[dependencies]
bevy_gdext = { path = "../../../" }
bevy = { version = "0.10.0", default-features = false, features = ["bevy_asset"] } # Disable `default-features` since Godot will be doing all the rendering.
godot = { git = "https://github.com/godot-rust/gdext.git" }